--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"ip":"Oneblocksr1.aternos.me","name":"Minecraftserver","port":"13861"}
+{"ip":"oneblocksr1.aternos.me","name":"Minecraftserver","port":"56677"}
