--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"ip":"oneblocksr1.aternos.me","name":"Minecraftserver","port":"56677"}
+{"ip":"WILD_SURVIVAL_SMP.aternos.me","name":"Minecraftserver","port":"25816"}
